index page scroll fix

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         }
         .content {
             display: block;
-            max-height: 2000px;
-            overflow: hidden;
+            max-height: none;
+            overflow: visible;
             transition: max-height 0.3s ease-out;
         }
         .content.collapsed {
