--- a/dailies/pages/2026-01-08.html
+++ b/dailies/pages/2026-01-08.html
@@ -42,6 +42,7 @@
             position: relative;
             margin-right: 20px;
             min-height: 600px; /* 改为最小高度而不是固定高度 */
+            max-height: 90vh; /* 限制最大高度防止溢出 */
             height: auto; /* 自适应内容高度 */
             cursor: pointer; /* 增加指针样式提示可点击 */
         }
@@ -68,11 +69,10 @@
             left: 0;
             width: 100%;
             box-sizing: border-box;
-            min-height: 100%;
-            height: auto; /* 允许内容决定高度 */
+            height: 100%; /* 使用容器的100%高度 */
             transition: transform 0.5s ease, opacity 0.5s ease;
             overflow-y: auto; /* 允许垂直滚动 */
-            max-height: 90vh; /* 限制最大高度为视口的90% */
+            overflow-x: hidden; /* 防止横向滚动 */
         }
         
         /* 非激活卡片的样式 - 新增 */
@@ -104,14 +104,18 @@
         .flowchart-card {
             text-align: center;
             background-color: #fff !important;
-            overflow: auto !important;
-            padding-bottom: 50px; /* 添加底部填充 */
+            overflow-y: auto !important; /* 允许垂直滚动 */
+            overflow-x: hidden !important; /* 防止横向滚动 */
+            padding: 20px; /* 添加内边距 */
+            padding-bottom: 50px; /* 添加底部填充确保能看到底部 */
         }
 
         .flowchart-card svg {
             width: 100%;
             height: auto;
-            max-height: none; /* 移除任何高度限制 */
+            max-width: 100%; /* 确保不超出容器宽度 */
+            display: block; /* 防止底部空白 */
+            margin: 0 auto; /* 居中显示 */
         }
         
         /* 传统卡片样式 */
