--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
                 <div class="content">
                     <ul class="day-list">
                         <li><a href="dailies/pages/2026-01-27.html">2026-01-27</a></li>
-                        <li><a href="dailies/pages/2026-01-26.html">2026-01-26</a></li>
+                        <li><a href="dailies/pages/2026-01-26.html">2026-01-26 <span class="note-badge">📝</span></a>
+                        </li>
                         <li><a href="dailies/pages/2026-01-23.html">2026-01-23 <span class="note-badge">📝</span></a>
                         </li>
                         <li><a href="dailies/pages/2026-01-22.html">2026-01-22 <span class="note-badge">📝</span></a>
